--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "npm": "^9.6.0",
     "react": "^18.2.0",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "start": "^5.1.0",
